[metadata]
name = test_app
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
setup_requires =
  setuptools_scm

[options.packages.find]
where = src

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[semantic_release]
version_variable = setup.py:__version__
branch=main
upload_to_repository=false
version_source = tag
tag_commit = true
tag_format = {version}

# Test